--- a/packages/@markuplint/i18n/locales/en.json
+++ b/packages/@markuplint/i18n/locales/en.json
@@ -1,5 +1,9 @@
 {
 	"keywords": {
+		"1": "one",
+		"2": "two",
+		"3": "three",
+		"4": "four",
 		"html elements": "HTML elements",
 		"the html specification": "the HTML specification",
 		"the svg specification": "the SVG specification",
