--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -5,110 +5,208 @@
 		"separator": ""
 	},
 	"keywords": {
-		"tag": "タグ",
-		"tag name": "タグ名",
-		"tag names": "タグ名",
-		"element": "要素",
-		"html elements": "HTML要素",
-		"attribute": "属性",
-		"attributes": "属性",
+		". ": "。",
+		"1": "1",
+		"2": "2",
+		"3": "3",
+		"4": "4",
+		"absolute url": "絶対URL",
+		"accessible name": "アクセシブルな名前",
+		"allow-list": "許可リスト",
+		"alpha channel value": "不透明度",
+		"angle": "角度",
+		"aria in html specification": "ARIA in HTMLの仕様",
+		"aria state/property": "ARIAステート/プロパティ",
 		"attribute name": "属性名",
 		"attribute names": "属性名",
 		"attribute value": "属性値",
+		"attribute": "属性",
+		"attributes": "属性",
+		"autocomplete": "オートコンプリート",
+		"autofill field name": "オートフィルフィールド名",
+		"autofill named group": "オートフィルグループ名",
+		"browsing context name": "閲覧コンテキスト名",
+		"c:deprecated": "は非推奨です",
+		"c:disallowed": "は許可されていません",
+		"c:duplicated": "が重複しています",
+		"c:invalid": "は妥当ではありません",
+		"c:non-standard": "は非標準です",
+		"c:obsolete": "は廃止されています",
+		"character": "文字",
+		"characters": "文字",
 		"class name": "クラス名",
-		"role": "ロール",
-		"the abstract role": "抽象ロール",
-		"the implicit role": "暗黙のロール",
-		"aria state/property": "ARIAステート/プロパティ",
-		"global state/property": "グローバルステート/プロパティ",
-		"value": "値",
-		"default value": "デフォルト値",
+		"comma-separated list": "カンマ区切りのリスト",
+		"comma": "カンマ",
+		"commas": "カンマ",
 		"content": "内容",
 		"contents": "内容",
-		"descendant": "子孫",
-		"semantics": "セマンティクス",
-		"accessible name": "アクセシブルな名前",
-		"lowercase": "小文字",
-		"uppercase": "大文字",
-		"illegal characters": "不正な文字",
-		"empty string": "空文字",
-		"zero": "ゼロ",
-		"one": "1",
-		"integer": "整数",
-		"non-negative integer": "正の整数",
-		"floating-point number": "浮動小数点数",
-		"angle": "角度",
-		"alpha channel value": "不透明度",
-		"doctype": "文書型",
-		"obsolete doctype": "廃止された文書型",
-		"hash-name reference": "ハッシュ名参照",
-		"top level": "トップレベル",
+		"coron": "コロン",
+		"custom element name": "カスタム要素名",
+		"date time": "日時",
+		"date": "日",
+		"datetime": "日時",
 		"declarate": "宣言",
+		"default value": "デフォルト値",
+		"deprecated": "非推奨",
+		"descendant": "子孫",
+		"directive": "ディレクティブ",
+		"disallowed": "未許可",
+		"doctype": "文書型",
+		"double-quote": "ダブルクオート",
+		"duplicated": "重複",
+		"element": "要素",
+		"empty string": "空文字",
+		"empty": "空",
+		"escape in character reference": "文字参照でエスケープ",
+		"extension": "拡張子",
+		"feature-identifier": "機能ID",
+		"floating-point number": "浮動小数点数",
+		"format": "形式",
+		"fractional part": "小数部",
+		"global state/property": "グローバルステート/プロパティ",
+		"hash name": "ハッシュ名",
+		"hash-name reference": "ハッシュ名参照",
+		"hash": "ハッシュ",
+		"hour": "時",
+		"html elements": "HTML要素",
+		"http(s) schema": "HTTP(S)スキーマ",
+		"hyphen": "ハイフン",
+		"illegal characters": "不正な文字",
+		"illegal combination": "不正な組み合わせ",
+		"integer": "整数",
+		"invalid": "不正",
+		"keyword": "キーワード",
+		"list": "リスト",
+		"lowercase": "小文字",
+		"mime type with no parameters": "パラメータなしMIMEタイプ",
+		"mime type": "MIMEタイプ",
+		"minute": "分",
+		"month": "月",
+		"newline": "改行",
+		"non-negative integer": "正の整数",
+		"non-standard": "非標準",
+		"number": "数値",
+		"obsolete doctype": "廃止された文書型",
+		"obsolete": "廃止ずみ",
+		"one code point character": "1つのコードポイントから成る文字",
+		"one": "1",
+		"origin": "オリジン",
+		"password": "パスワード",
+		"property name": "プロパティ名",
+		"query": "クエリ",
+		"quote": "クオート",
+		"regular expression": "正規表現",
+		"role": "ロール",
+		"second": "秒",
+		"semantics": "セマンティクス",
+		"serialized-origin": "シリアル化されたオリジン",
+		"single-quote": "シングルクオート",
+		"space-separated list": "空白区切りのリスト",
+		"space": "空白",
+		"spaces": "空白",
+		"tag name": "タグ名",
+		"tag names": "タグ名",
+		"the abstract role": "抽象ロール",
+		"the content of the list": "リストの内容",
 		"the html specification": "HTMLの仕様",
+		"the implicit role": "暗黙のロール",
 		"the svg specification": "SVGの仕様",
 		"the wai-aria specification": "WAI-ARIAの仕様",
-		"aria in html specification": "ARIA in HTMLの仕様",
-		"deprecated": "非推奨",
-		"c:deprecated": "は非推奨です",
-		"obsolete": "廃止ずみ",
-		"c:obsolete": "は廃止されています",
-		"non-standard": "非標準",
-		"c:non-standard": "は非標準です",
-		"duplicated": "重複",
-		"c:duplicated": "が重複しています",
-		"disallowed": "未許可",
-		"c:disallowed": "は許可されていません",
-		"invalid": "不正",
-		"c:invalid": "は妥当ではありません",
-		"escape in character reference": "文字参照でエスケープ",
-		". ": "。"
+		"time-zone": "タイムゾーン",
+		"time": "時間",
+		"token": "トークン",
+		"top level": "トップレベル",
+		"unit": "単位",
+		"uppercase": "大文字",
+		"url who schema is an http(s) schema": "HTTP(S)スキーマのURL",
+		"username": "ユーザー名",
+		"value": "値",
+		"whitespace": "ホワイトスペース",
+		"whitespaces": "ホワイトスペース",
+		"xml name": "XML名",
+		"year": "年",
+		"zero": "ゼロ"
 	},
 	"sentences": {
-		"the {0}": "その{0}",
-		"the \"{0}\"": "「{0}」",
-		"the \"{0}\" {1}": "{1}「{0}」",
-		"the current \"{0}\" {1}": "現在の{1}「{0}」",
-		"the implicit \"{0}\" {1}": "暗黙の{1}「{0}」",
-		"{0} of {1}": "{1}の{0}",
 		"{0:c} and {1:c}": "{0}且つ、{1}",
-		"either {0}": "{0}のいずれか",
+		"{0:c} on {1}": "{1}では、{0:c}",
+		"{0} ({1})": "{0}({1})",
+		"{0} according to {1}": "{1}において、{0}",
+		"{0} as {1}": "{1}として{0}",
+		"{0} behaves the same as {1} if {2}": "{0}は{2}の場合、{1}と同じ振る舞いをします",
+		"{0} chars": "{0}文字",
+		"{0} contradicts {1}": "{0}は{1}と矛盾しています",
+		"{0} digits": "{0}桁",
+		"{0} does not exist": "{0}は存在しません",
+		"{0} expects {1:c}": "{0}は{1}である必要があります",
+		"{0} expects {1}": "{0}には{1}が必要です",
+		"{0} greater than {1} less than {2}": "{1}より大きく{2}より小さい{0}",
+		"{0} greater than {1} less than or equal to {2}": "{1}より大きく{2}以下の{0}",
 		"{0} greater than {1}": "{1}より大きい{0}",
+		"{0} greater than or equal to {1} less than {2}": "{1}以上で{2}より小さい{0}",
+		"{0} greater than or equal to {1} less than or equal to {2}": "{1}以上で{2}以下の{0}",
+		"{0} greater than or euqal to {1}": "{1}以上の{0}",
+		"{0} has {1}": "{0}は{1}を持っています",
+		"{0} includes {1}": "{0}は{1}を含んでいます",
+		"{0} is {1:c}": "{0}{1:c}",
+		"{0} is {1}": "{0}は{1}です",
+		"{0} is not {1}": "{0}は{1}ではありません",
+		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
+		"{0} less than {1}": "{1}より小さい{0}",
+		"{0} less than or equal to {1}": "{1}以下の{0}",
+		"{0} must {1}": "{0}は{1}するべきです",
+		"{0} must be {1}": "{0}は{1}にするべきです",
+		"{0} must not {1}": "{0}は{1}するべきではありません",
+		"{0} must not be {1}": "{0}は{1}にするべきではありません",
+		"{0} needs {1}": "{0}には{1}が必要です",
+		"{0} of {1}": "{1}の{0}",
+		"{0} or {1}": "{0}もしくは{1}",
+		"{0} or more chars": "{0}文字以上",
+		"{0} or more digits": "{0}桁以上",
+		"{0} part of {1}": "{1}の{0}の部分",
+		"{0} should {1}": "{0}は{1}したほうがよいです",
+		"{0} should be {1}": "{0}は{1}にしたほうがよいです",
+		"{0} should not {1}": "{0}は{1}しないほうがよいです",
+		"{0} should not be {1}": "{0}は{1}にしないほうがよいです",
+		"{0} syntax": "{0}構文",
+		"{0} to {1} chars": "{0}から{1}文字",
+		"{0} to {1} digits": "{0}から{1}桁",
+		"{0} to {1}": "{0}から{1}",
+		"a {0}": "{0}",
+		"an {0}": "{0}",
+		"Arrowed values are: {0}": "許可されている値は次のとおりです {0}",
+		"Cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
+		"Cannot overwrite {0}": "{0}を上書きすることはできません",
+		"Did you mean \"{0}\"?": "「{0}」ではありませんか？",
+		"either {0}": "{0}のいずれか",
+		"extra {0}": "余計な{0}",
+		"Found {0}": "{0}が発見されました",
+		"in the range between {0} and {1}": "{0}から{1}の範囲",
+		"It doesn't need {0}": "{0}は不要です",
+		"It expects {0:c}": "{0}である必要があります",
+		"It expects {0}": "{0}が必要です",
+		"It includes {0}": "{0}を含んでいます",
+		"It is {0:c}": "{0:c}",
+		"It is {0}": "{0}です",
+		"It needs {0}": "{0}が必要です",
 		"less than {0}": "{0}未満",
 		"less than or equal to {0}": "{0}以下",
-		"in the range between {0} and {1}": "{0}から{1}の範囲",
-		"valid {0}": "妥当な{0}",
-		"unique {0}": "一意の{0}",
-		"{0} as {1}": "{1}として{0}",
-		"the same {0} as {1}": "{1}と同等の{0}",
-		"{0} to {1}": "{0}から{1}",
-		"{0} or {1}": "{0}もしくは{1}",
-		"{0} is {1}": "{0}は{1}です",
-		"{0} is {1:c}": "{0}{1:c}",
-		"{0} is not {1}": "{0}は{1}ではありません",
-		"It is {0}": "{0}です",
-		"It is {0:c}": "{0:c}",
-		"{0} must {1}": "{0}は{1}するべきです",
-		"{0} should {1}": "{0}は{1}したほうがよいです",
-		"{0} must be {1}": "{0}は{1}にするべきです",
-		"{0} should be {1}": "{0}は{1}にしたほうがよいです",
-		"{0} must not {1}": "{0}は{1}するべきではありません",
-		"{0} should not {1}": "{0}は{1}しないほうがよいです",
-		"{0} must not be {1}": "{0}は{1}にするべきではありません",
-		"{0} should not be {1}": "{0}は{1}にしないほうがよいです",
-		"{0} expects {1}": "{0}には{1}が必要です",
-		"{0} expects {1:c}": "{0}は{1}である必要があります",
-		"{0} has {1}": "{0}は{1}を持っています",
-		"{0} behaves the same as {1} if {2}": "{0}は{2}の場合、{1}と同じ振る舞いをします",
-		"{0} does not exist": "{0}は存在しません",
-		"{0} contradicts {1}": "{0}は{1}と矛盾しています",
-		"Require {0}": "{0}が必要です",
+		"Missing {0} in {1}": "{1}に{0}がありません",
+		"Missing {0}": "{0}がありません",
 		"Never {0} {1}": "{1}を{0}しないでください",
-		"Cannot overwrite {0}": "{0}を上書きすることはできません",
-		"Cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
-		"{0:c} on {1}": "{1}では、{0:c}",
-		"{0} according to {1}": "{1}において、{0}",
-		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
-		"Arrowed values are: {0}": "許可されている値は次のとおりです {0}",
-		"Did you mean \"{0}\"?": "「{0}」ですか？"
+		"Require {0}": "{0}が必要です",
+		"the {0} format": "{0}形式",
+		"the {0} part": "{0}の部分",
+		"the {0}": "{0}",
+		"the \"{0}\" {1}": "{1}「{0}」",
+		"the \"{0}\"": "「{0}」",
+		"the CSS Syntax \"{0}\"": "CSS構文として「{0}」",
+		"the current \"{0}\" {1}": "現在の{1}「{0}」",
+		"the implicit \"{0}\" {1}": "暗黙の{1}「{0}」",
+		"the list of {0}": "{0}のリスト",
+		"the same {0} as {1}": "{1}と同等の{0}",
+		"unexpected {0}": "期待されない{0}",
+		"unique {0}": "一意の{0}",
+		"valid {0}": "妥当な{0}"
 	}
 }
