--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -17,115 +17,214 @@
 			"type": "object",
 			"additionalProperties": false,
 			"properties": {
-				"tag": { "type": "string" },
-				"tag name": { "type": "string" },
-				"tag names": { "type": "string" },
-				"element": { "type": "string" },
-				"html elements": { "type": "string" },
-				"attribute": { "type": "string" },
-				"attributes": { "type": "string" },
+				". ": { "type": "string" },
+				"1": { "type": "string" },
+				"2": { "type": "string" },
+				"3": { "type": "string" },
+				"4": { "type": "string" },
+				"absolute url": { "type": "string" },
+				"accessible name": { "type": "string" },
+				"allow-list": { "type": "string" },
+				"alpha channel value": { "type": "string" },
+				"angle": { "type": "string" },
+				"aria in html specification": { "type": "string" },
+				"aria state/property": { "type": "string" },
 				"attribute name": { "type": "string" },
 				"attribute names": { "type": "string" },
 				"attribute value": { "type": "string" },
+				"attribute": { "type": "string" },
+				"attributes": { "type": "string" },
+				"autocomplete": { "type": "string" },
+				"autofill field name": { "type": "string" },
+				"autofill named group": { "type": "string" },
+				"browsing context name": { "type": "string" },
+				"c:deprecated": { "type": "string" },
+				"c:disallowed": { "type": "string" },
+				"c:duplicated": { "type": "string" },
+				"c:invalid": { "type": "string" },
+				"c:non-standard": { "type": "string" },
+				"c:obsolete": { "type": "string" },
+				"character": { "type": "string" },
+				"characters": { "type": "string" },
 				"class name": { "type": "string" },
-				"role": { "type": "string" },
-				"the abstract role": { "type": "string" },
-				"the implicit role": { "type": "string" },
-				"aria state/property": { "type": "string" },
-				"global state/property": { "type": "string" },
-				"value": { "type": "string" },
-				"default value": { "type": "string" },
+				"comma-separated list": { "type": "string" },
+				"comma": { "type": "string" },
+				"commas": { "type": "string" },
 				"content": { "type": "string" },
 				"contents": { "type": "string" },
-				"descendant": { "type": "string" },
-				"semantics": { "type": "string" },
-				"accessible name": { "type": "string" },
-				"lowercase": { "type": "string" },
-				"uppercase": { "type": "string" },
-				"illegal characters": { "type": "string" },
-				"empty string": { "type": "string" },
-				"zero": { "type": "string" },
-				"one": { "type": "string" },
-				"integer": { "type": "string" },
-				"non-negative integer": { "type": "string" },
-				"floating-point number": { "type": "string" },
-				"angle": { "type": "string" },
-				"alpha channel value": { "type": "string" },
-				"doctype": { "type": "string" },
-				"obsolete doctype": { "type": "string" },
-				"hash-name reference": { "type": "string" },
-				"top level": { "type": "string" },
+				"coron": { "type": "string" },
+				"custom element name": { "type": "string" },
+				"date time": { "type": "string" },
+				"date": { "type": "string" },
+				"datetime": { "type": "string" },
 				"declarate": { "type": "string" },
+				"default value": { "type": "string" },
+				"deprecated": { "type": "string" },
+				"descendant": { "type": "string" },
+				"directive": { "type": "string" },
+				"disallowed": { "type": "string" },
+				"doctype": { "type": "string" },
+				"double-quote": { "type": "string" },
+				"duplicated": { "type": "string" },
+				"element": { "type": "string" },
+				"empty": { "type": "string" },
+				"empty string": { "type": "string" },
+				"extension": { "type": "string" },
+				"feature-identifier": { "type": "string" },
+				"escape in character reference": { "type": "string" },
+				"floating-point number": { "type": "string" },
+				"format": { "type": "string" },
+				"fractional part": { "type": "string" },
+				"global state/property": { "type": "string" },
+				"hash name": { "type": "string" },
+				"hash-name reference": { "type": "string" },
+				"hash": { "type": "string" },
+				"hour": { "type": "string" },
+				"html elements": { "type": "string" },
+				"http(s) schema": { "type": "string" },
+				"hyphen": { "type": "string" },
+				"illegal characters": { "type": "string" },
+				"illegal combination": { "type": "string" },
+				"integer": { "type": "string" },
+				"invalid": { "type": "string" },
+				"keyword": { "type": "string" },
+				"list": { "type": "string" },
+				"lowercase": { "type": "string" },
+				"mime type with no parameters": { "type": "string" },
+				"mime type": { "type": "string" },
+				"minute": { "type": "string" },
+				"month": { "type": "string" },
+				"newline": { "type": "string" },
+				"non-negative integer": { "type": "string" },
+				"non-standard": { "type": "string" },
+				"number": { "type": "string" },
+				"obsolete doctype": { "type": "string" },
+				"obsolete": { "type": "string" },
+				"one code point character": { "type": "string" },
+				"one": { "type": "string" },
+				"origin": { "type": "string" },
+				"password": { "type": "string" },
+				"property name": { "type": "string" },
+				"query": { "type": "string" },
+				"quote": { "type": "string" },
+				"regular expression": { "type": "string" },
+				"role": { "type": "string" },
+				"second": { "type": "string" },
+				"semantics": { "type": "string" },
+				"serialized-origin": { "type": "string" },
+				"single-quote": { "type": "string" },
+				"space-separated list": { "type": "string" },
+				"space": { "type": "string" },
+				"spaces": { "type": "string" },
+				"tag name": { "type": "string" },
+				"tag names": { "type": "string" },
+				"tag": { "type": "string" },
+				"the abstract role": { "type": "string" },
+				"the content of the list": { "type": "string" },
 				"the html specification": { "type": "string" },
+				"the implicit role": { "type": "string" },
 				"the svg specification": { "type": "string" },
 				"the wai-aria specification": { "type": "string" },
-				"aria in html specification": { "type": "string" },
-				"deprecated": { "type": "string" },
-				"c:deprecated": { "type": "string" },
-				"obsolete": { "type": "string" },
-				"c:obsolete": { "type": "string" },
-				"non-standard": { "type": "string" },
-				"c:non-standard": { "type": "string" },
-				"duplicated": { "type": "string" },
-				"c:duplicated": { "type": "string" },
-				"disallowed": { "type": "string" },
-				"c:disallowed": { "type": "string" },
-				"invalid": { "type": "string" },
-				"c:invalid": { "type": "string" },
-				"escape in character reference": { "type": "string" },
-				". ": { "type": "string" }
+				"time-zone": { "type": "string" },
+				"time": { "type": "string" },
+				"token": { "type": "string" },
+				"top level": { "type": "string" },
+				"unit": { "type": "string" },
+				"uppercase": { "type": "string" },
+				"url who schema is an http(s) schema": { "type": "string" },
+				"username": { "type": "string" },
+				"value": { "type": "string" },
+				"whitespace": { "type": "string" },
+				"whitespaces": { "type": "string" },
+				"xml name": { "type": "string" },
+				"year": { "type": "string" },
+				"zero": { "type": "string" }
 			}
 		},
 		"sentences": {
 			"type": "object",
 			"additionalProperties": false,
 			"properties": {
-				"the {0}": { "type": "string" },
-				"the \"{0}\"": { "type": "string" },
-				"the \"{0}\" {1}": { "type": "string" },
-				"the current \"{0}\" {1}": { "type": "string" },
-				"the implicit \"{0}\" {1}": { "type": "string" },
-				"{0} of {1}": { "type": "string" },
 				"{0:c} and {1:c}": { "type": "string" },
-				"either {0}": { "type": "string" },
+				"{0:c} on {1}": { "type": "string" },
+				"{0} ({1})": { "type": "string" },
+				"{0} according to {1}": { "type": "string" },
+				"{0} as {1}": { "type": "string" },
+				"{0} behaves the same as {1} if {2}": { "type": "string" },
+				"{0} chars": { "type": "string" },
+				"{0} contradicts {1}": { "type": "string" },
+				"{0} digits": { "type": "string" },
+				"{0} does not exist": { "type": "string" },
+				"{0} expects {1:c}": { "type": "string" },
+				"{0} expects {1}": { "type": "string" },
+				"{0} greater than {1} less than {2}": { "type": "string" },
+				"{0} greater than {1} less than or equal to {2}": { "type": "string" },
 				"{0} greater than {1}": { "type": "string" },
+				"{0} greater than or equal to {1} less than {2}": { "type": "string" },
+				"{0} greater than or equal to {1} less than or equal to {2}": { "type": "string" },
+				"{0} greater than or euqal to {1}": { "type": "string" },
+				"{0} has {1}": { "type": "string" },
+				"{0} includes {1}": { "type": "string" },
+				"{0} is {1:c}": { "type": "string" },
+				"{0} is {1}": { "type": "string" },
+				"{0} is not {1}": { "type": "string" },
+				"{0} is unmatched with the below patterns: {1}": { "type": "string" },
+				"{0} less than {1}": { "type": "string" },
+				"{0} less than or equal to {1}": { "type": "string" },
+				"{0} must {1}": { "type": "string" },
+				"{0} must be {1}": { "type": "string" },
+				"{0} must not {1}": { "type": "string" },
+				"{0} must not be {1}": { "type": "string" },
+				"{0} needs {1}": { "type": "string" },
+				"{0} of {1}": { "type": "string" },
+				"{0} or {1}": { "type": "string" },
+				"{0} or more chars": { "type": "string" },
+				"{0} or more digits": { "type": "string" },
+				"{0} part of {1}": { "type": "string" },
+				"{0} should {1}": { "type": "string" },
+				"{0} should be {1}": { "type": "string" },
+				"{0} should not {1}": { "type": "string" },
+				"{0} should not be {1}": { "type": "string" },
+				"{0} syntax": { "type": "string" },
+				"{0} to {1} chars": { "type": "string" },
+				"{0} to {1} digits": { "type": "string" },
+				"{0} to {1}": { "type": "string" },
+				"a {0}": { "type": "string" },
+				"an {0}": { "type": "string" },
+				"Arrowed values are: {0}": { "type": "string" },
+				"Cannot overwrite {0} to {1}": { "type": "string" },
+				"Cannot overwrite {0}": { "type": "string" },
+				"Did you mean \"{0}\"?": { "type": "string" },
+				"either {0}": { "type": "string" },
+				"extra {0}": { "type": "string" },
+				"Found {0}": { "type": "string" },
+				"in the range between {0} and {1}": { "type": "string" },
+				"It doesn't need {0}": { "type": "string" },
+				"It expects {0:c}": { "type": "string" },
+				"It expects {0}": { "type": "string" },
+				"It includes {0}": { "type": "string" },
+				"It is {0:c}": { "type": "string" },
+				"It is {0}": { "type": "string" },
+				"It needs {0}": { "type": "string" },
 				"less than {0}": { "type": "string" },
 				"less than or equal to {0}": { "type": "string" },
-				"in the range between {0} and {1}": { "type": "string" },
-				"valid {0}": { "type": "string" },
-				"unique {0}": { "type": "string" },
-				"{0} as {1}": { "type": "string" },
-				"the same {0} as {1}": { "type": "string" },
-				"{0} to {1}": { "type": "string" },
-				"{0} or {1}": { "type": "string" },
-				"{0} is {1}": { "type": "string" },
-				"{0} is {1:c}": { "type": "string" },
-				"{0} is not {1}": { "type": "string" },
-				"It is {0}": { "type": "string" },
-				"It is {0:c}": { "type": "string" },
-				"{0} must {1}": { "type": "string" },
-				"{0} should {1}": { "type": "string" },
-				"{0} must be {1}": { "type": "string" },
-				"{0} should be {1}": { "type": "string" },
-				"{0} must not {1}": { "type": "string" },
-				"{0} should not {1}": { "type": "string" },
-				"{0} must not be {1}": { "type": "string" },
-				"{0} should not be {1}": { "type": "string" },
-				"{0} expects {1}": { "type": "string" },
-				"{0} expects {1:c}": { "type": "string" },
-				"{0} has {1}": { "type": "string" },
-				"{0} behaves the same as {1} if {2}": { "type": "string" },
-				"{0} does not exist": { "type": "string" },
-				"{0} contradicts {1}": { "type": "string" },
-				"Require {0}": { "type": "string" },
+				"Missing {0} in {1}": { "type": "string" },
+				"Missing {0}": { "type": "string" },
 				"Never {0} {1}": { "type": "string" },
-				"Cannot overwrite {0}": { "type": "string" },
-				"Cannot overwrite {0} to {1}": { "type": "string" },
-				"{0:c} on {1}": { "type": "string" },
-				"{0} according to {1}": { "type": "string" },
-				"{0} is unmatched with the below patterns: {1}": { "type": "string" },
-				"Arrowed values are: {0}": { "type": "string" },
-				"Did you mean \"{0}\"?": { "type": "string" }
+				"Require {0}": { "type": "string" },
+				"the {0} format": { "type": "string" },
+				"the {0} part": { "type": "string" },
+				"the {0}": { "type": "string" },
+				"the \"{0}\" {1}": { "type": "string" },
+				"the \"{0}\"": { "type": "string" },
+				"the CSS Syntax \"{0}\"": { "type": "string" },
+				"the current \"{0}\" {1}": { "type": "string" },
+				"the implicit \"{0}\" {1}": { "type": "string" },
+				"the list of {0}": { "type": "string" },
+				"the same {0} as {1}": { "type": "string" },
+				"unexpected {0}": { "type": "string" },
+				"unique {0}": { "type": "string" },
+				"valid {0}": { "type": "string" }
 			}
 		}
 	}
