--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -174,7 +174,7 @@
 		"{0} to {1}": "{0}から{1}",
 		"a {0}": "{0}",
 		"an {0}": "{0}",
-		"Arrowed values are: {0}": "許可されている値は次のとおりです {0}",
+		"Allowed values are: {0}": "許可されている値は次のとおりです {0}",
 		"Cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
 		"Cannot overwrite {0}": "{0}を上書きすることはできません",
 		"Did you mean \"{0}\"?": "「{0}」ではありませんか？",
