--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -191,7 +191,7 @@
 				"{0} to {1}": { "type": "string" },
 				"a {0}": { "type": "string" },
 				"an {0}": { "type": "string" },
-				"Arrowed values are: {0}": { "type": "string" },
+				"Allowed values are: {0}": { "type": "string" },
 				"Cannot overwrite {0} to {1}": { "type": "string" },
 				"Cannot overwrite {0}": { "type": "string" },
 				"Did you mean \"{0}\"?": { "type": "string" },
