--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -150,6 +150,7 @@
 		"{0} includes {1}": "{0}は{1}を含んでいます",
 		"{0} is {1:c}": "{0}{1:c}",
 		"{0} is {1}": "{0}は{1}です",
+		"{0} is disallowed": "{0}は禁止されています",
 		"{0} is not {1}": "{0}は{1}ではありません",
 		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
 		"{0} less than {1}": "{1}より小さい{0}",
