Add "boolean attribute" to i18n dictionary.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -37,6 +37,7 @@
 				"autocomplete": { "type": "string" },
 				"autofill field name": { "type": "string" },
 				"autofill named group": { "type": "string" },
+				"boolean attribute": { "type": "string" },
 				"browsing context name": { "type": "string" },
 				"c:deprecated": { "type": "string" },
 				"c:disallowed": { "type": "string" },
