--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -25,6 +25,7 @@
 		"autocomplete": "オートコンプリート",
 		"autofill field name": "オートフィルフィールド名",
 		"autofill named group": "オートフィルグループ名",
+		"boolean attribute": "論理属性",
 		"browsing context name": "閲覧コンテキスト名",
 		"c:deprecated": "は非推奨です",
 		"c:disallowed": "は許可されていません",
