Add the `no-boolean-attr-value` rule.

--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -33,3 +33,4 @@ title: Rules
 - [`case-sensitive-attr-name`](/rules/case-sensitive-attr-name)
 - [`case-sensitive-tag-name`](/rules/case-sensitive-tag-name)
 - [`indentation`](/rules/indentation)
+- [`no-boolean-attr-value`](/rules/no-boolean-attr-value)
