--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -10,6 +10,7 @@ title: Rules
 - [`deprecated-element`](/rules/deprecated-element)
 - [`doctype`](/rules/doctype)
 - [`id-duplication`](/rules/id-duplication)
+- [`ineffective-attr`](/rules/ineffective-attr)
 - [`invalid-attr`](/rules/invalid-attr)
 - [`permitted-contents`](/rules/permitted-contents)
 - [`required-attr`](/rules/required-attr)
