--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -25,6 +25,11 @@ title: Rules
 
 - [`class-naming`](/rules/class-naming)
 
+## Maintenability
+
+- [`no-hard-code-id`](/rules/no-hard-code-id)
+- [`no-use-event-handler-attr`](/rules/no-use-event-handler-attr)
+
 ## Style
 
 - [`attr-equal-space-after`](/rules/attr-equal-space-after)
