Add the `no-default-value` rule

--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -40,3 +40,4 @@ title: Rules
 - [`case-sensitive-tag-name`](/rules/case-sensitive-tag-name)
 - [`indentation`](/rules/indentation)
 - [`no-boolean-attr-value`](/rules/no-boolean-attr-value)
+- [`no-default-value`](/rules/no-default-value)
