Add the `no-refer-to-non-existent-id` rule

--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -18,6 +18,7 @@ title: Rules
 ## Accessibility
 
 - [`landmark-roles`](/rules/landmark-roles)
+- [`no-refer-to-non-existent-id`](/rules/no-refer-to-non-existent-id)
 - [`required-h1`](/rules/required-h1)
 - [`wai-aria`](/rules/wai-aria)
 
