--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -14,6 +14,7 @@ title: Rules
 - [`invalid-attr`](/rules/invalid-attr)
 - [`permitted-contents`](/rules/permitted-contents)
 - [`required-attr`](/rules/required-attr)
+- [`required-element`](/rules/required-element)
 
 ## Accessibility
 
