Add the disallowed-element rule.

--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -8,6 +8,7 @@ title: Rules
 - [`character-reference`](/rules/character-reference)
 - [`deprecated-attr`](/rules/deprecated-attr)
 - [`deprecated-element`](/rules/deprecated-element)
+- [`disallowed-element`](/rules/disallowed-element)
 - [`doctype`](/rules/doctype)
 - [`id-duplication`](/rules/id-duplication)
 - [`ineffective-attr`](/rules/ineffective-attr)
