--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -3,6 +3,9 @@ title: Setting for other languages
 back:
   title: Set up rules
   href: set-up-rules
+next:
+  title: Command Line Interface
+  href: cli
 ---
 
 ## Install plugins for a language
