--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -72,6 +72,7 @@
 				"element": { "type": "string" },
 				"empty": { "type": "string" },
 				"empty string": { "type": "string" },
+				"end tag": { "type": "string" },
 				"extension": { "type": "string" },
 				"feature-identifier": { "type": "string" },
 				"escape in character reference": { "type": "string" },
