--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -41,6 +41,7 @@ title: Rules
 - [`attr-value-quotes`](/rules/attr-value-quotes)
 - [`case-sensitive-attr-name`](/rules/case-sensitive-attr-name)
 - [`case-sensitive-tag-name`](/rules/case-sensitive-tag-name)
+- [`end-tag`](/rules/end-tag)
 - [`indentation`](/rules/indentation)
 - [`no-boolean-attr-value`](/rules/no-boolean-attr-value)
 - [`no-default-value`](/rules/no-default-value)
