--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -27,24 +27,33 @@ This file is _loaded automatically_ when CLI executes or open a target file thro
 {
   "rules": {
     "attr-duplication": true,
+    "attr-equal-space-after": true,
+    "attr-equal-space-before": true,
+    "attr-spacing": true,
+    "attr-value-quotes": true,
+    "case-sensitive-attr-name": true,
+    "case-sensitive-tag-name": true,
     "character-reference": true,
+    "class-naming": false,
     "deprecated-attr": true,
     "deprecated-element": true,
+    "disallowed-element": true,
     "doctype": true,
+    "end-tag": true,
     "id-duplication": true,
-    "permitted-contents": true,
-    "required-attr": true,
+    "indentation": true,
+    "ineffective-attr": true,
     "invalid-attr": true,
     "landmark-roles": true,
+    "no-boolean-attr-value": true,
+    "no-default-value": true,
+    "no-hard-code-id": true,
+    "no-refer-to-non-existent-id": true,
+    "no-use-event-handler-attr": true,
+    "permitted-contents": true,
+    "required-attr": true,
+    "required-element": true,
     "required-h1": true,
-    "class-naming": false,
-    "attr-equal-space-after": false,
-    "attr-equal-space-before": false,
-    "attr-spacing": false,
-    "attr-value-quotes": false,
-    "case-sensitive-attr-name": false,
-    "case-sensitive-tag-name": false,
-    "indentation": false,
     "wai-aria": true
   }
 }
