--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -13,7 +13,7 @@ next:
 Install the _parser plugin_ through NPM or Yarn:
 
 ```
-$ npm install --save-dev @markuplint/pug-parser
+$ npm install -D @markuplint/pug-parser
 # or
 $ yarn add -D @markuplint/pug-parser
 ```
@@ -21,13 +21,13 @@ $ yarn add -D @markuplint/pug-parser
 If a language has its own specification you should install the spec plugin with the parser plugin:
 
 ```
-$ npm install --save-dev @markuplint/jsx-parser @markuplint/react-spec
+$ npm install -D @markuplint/jsx-parser @markuplint/react-spec
 # or
 $ yarn add -D @markuplint/jsx-parser @markuplint/react-spec
 ```
 
 ```
-$ npm install --save-dev @markuplint/vue-parser @markuplint/vue-spec
+$ npm install -D @markuplint/vue-parser @markuplint/vue-spec
 # or
 $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
 ```
