--- a/website/src/pages/configuration/index.mdx
+++ b/website/src/pages/configuration/index.mdx
@@ -482,7 +482,7 @@ Support syntax and operators:
 | Attribute selector, Backward match               | `[data-attr$=value]`                                                                      | ✅      |
 | Negation pseudo-class                            | `:not(div)`                                                                               | ✅      |
 | Matches-Any pseudo-class                         | `:is(div)`                                                                                | ✅      |
-| Specificity-adjustment pseudo-class              | `:where(div)`                                                                             | ❌      |
+| Specificity-adjustment pseudo-class              | `:where(div)`                                                                             | ✅      |
 | Relational pseudo-class                          | `:has(div)` `:has(> div)`                                                                 | ✅      |
 | Directionality pseudo-class                      | `:dir(ltr)`                                                                               | ❌      |
 | Language pseudo-class                            | `:lang(en)`                                                                               | ❌      |
