Add the `require-accessible-name` rule.

--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -51,6 +51,7 @@ This file is _loaded automatically_ when CLI executes or open a target file thro
     "no-refer-to-non-existent-id": true,
     "no-use-event-handler-attr": true,
     "permitted-contents": true,
+    "require-accessible-name": true,
     "required-attr": true,
     "required-element": true,
     "required-h1": true,
