--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -21,6 +21,7 @@ title: Rules
 
 - [`landmark-roles`](/rules/landmark-roles)
 - [`no-refer-to-non-existent-id`](/rules/no-refer-to-non-existent-id)
+- [`require-accessible-name`](/rules/require-accessible-name)
 - [`required-h1`](/rules/required-h1)
 - [`wai-aria`](/rules/wai-aria)
 
