Add the explains about included packages. Fix for #363

--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -48,6 +48,9 @@ $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
 | [_Nunjucks_](https://mozilla.github.io/nunjucks/)                                      | `@markuplint/nunjucks-parser` | -                        |
 | [_Liquid_](https://liquidjs.com/)                                                      | `@markuplint/liquid-parser`   | -                        |
 
+There is `@markuplint/html-parser` package but the core package includes it.
+You don't need to specify it.
+
 ## Set to the configuration file
 
 Set about the plugin to the `parser` option on the configuration file.
@@ -95,6 +98,9 @@ const Component = ({ list }) => {
   </ul>
 </template>
 ```
+
+There is `@markuplint/html-spec` package but the core package includes it.
+You don't need to specify it.
 
 ## Note: Unsupported syntax
 
