--- a/website/src/pages/configuration/index.mdx
+++ b/website/src/pages/configuration/index.mdx
@@ -679,5 +679,5 @@ The above is the same as CSS selector `el1 el2 > el3 + el4 ~ el5`.
 
 ##### Usecase of `regexSelector`
 
-- [Check designed CSS class name](/configuration/regex-selector-sample#Case%201:%20Check%20designed%20CSS%20class%20name)
-- [Check filenames of images](/configuration/regex-selector-sample#Case%202:%20Check%20filenames%20of%20images)
+- [Check designed CSS class name](/configuration/regex-selector-sample#case-1:-check-designed-c-s-s-class-name)
+- [Check filenames of images](/configuration/regex-selector-sample#case-2:-check-filenames-of-images)
