--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -213,6 +213,7 @@
 		"the same {0} as {1}": "{1}と同等の{0}",
 		"unexpected {0}": "期待されない{0}",
 		"unique {0}": "一意の{0}",
+		"use {0}": "{0}を使いましょう",
 		"valid {0}": "妥当な{0}"
 	}
 }
