Add the `use-list` rule

--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -23,6 +23,7 @@ title: Rules
 - [`no-refer-to-non-existent-id`](/rules/no-refer-to-non-existent-id)
 - [`require-accessible-name`](/rules/require-accessible-name)
 - [`required-h1`](/rules/required-h1)
+- [`use-list`](/rules/use-list)
 - [`wai-aria`](/rules/wai-aria)
 
 ## Naming Convention
