--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -55,6 +55,7 @@ This file is _loaded automatically_ when CLI executes or open a target file thro
     "required-attr": true,
     "required-element": true,
     "required-h1": true,
+    "use-list": true,
     "wai-aria": true
   }
 }
