Add Smarty to parser list

--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -42,6 +42,7 @@ $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
 | [_Svelte_](https://svelte.dev/)                                                        | `@markuplint/svelte-parser`   | -                        |
 | [_Astro_](https://astro.build/)                                                        | `@markuplint/astro-parser`    | -                        |
 | [_PHP_](https://www.php.net/)                                                          | `@markuplint/php-parser`      | -                        |
+| [_Smarty_](https://www.smarty.net/)                                                    | `@markuplint/smarty-parser`   | -                        |
 | [_eRuby_](https://docs.ruby-lang.org/ja/latest/class/ERB.html)                         | `@markuplint/erb-parser`      | -                        |
 | [_EJS_](https://ejs.co/)                                                               | `@markuplint/ejs-parser`      | -                        |
 | [_Mustache_](https://mustache.github.io/) or [_Handlebars_](https://handlebarsjs.com/) | `@markuplint/mustache-parser` | -                        |
@@ -107,6 +108,7 @@ You don't need to specify it.
 Unsupported the syntax that is complex on the attribute value in some languages:
 
 - [PHP](https://www.php.net/)
+- [Smarty](https://www.smarty.net/)
 - [eRuby](https://docs.ruby-lang.org/ja/latest/class/ERB.html)
 - [EJS](https://ejs.co/)
 - [Mustache](https://mustache.github.io/)/[Handlebars](https://handlebarsjs.com/)
