Replace to "selector" from "tagName" deprecated.

--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -68,7 +68,7 @@ If you want the part of structures only to apply some rule then set the tag name
 {
   "nodeRules": [
     {
-      "tagName": "main",
+      "selector": "main",
       "rules": {
         "class-naming": "/[a-z]+(__[a-z]+)?/"
       }
