--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -30,7 +30,7 @@ title: Rules
 
 - [`class-naming`](/rules/class-naming)
 
-## Maintenability
+## Maintainability
 
 - [`no-hard-code-id`](/rules/no-hard-code-id)
 - [`no-use-event-handler-attr`](/rules/no-use-event-handler-attr)
